--- a/.gitattributes
+++ b/.gitattributes
@@ -1425,6 +1425,7 @@ packages/base/mysql/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyl
 packages/base/mysql/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/my4_sys.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/mysql.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql3_com.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql3_comdyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -1434,6 +1435,10 @@ packages/base/mysql/mysql3dyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyl
 packages/base/mysql/mysql3impl.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql3types.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/mysql40.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/mysql40dyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/mysql41.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/mysql41dyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql4_com.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql4_comdyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql4_comtypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
