+ added mysql40conn.pas and mysql41conn.pas, needed for revision 1781
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@1782 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -691,6 +691,8 @@ fcl/db/sqldb/mysql/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nat
 fcl/db/sqldb/mysql/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/mysql/mysql40conn.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/mysql/mysql41conn.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/mysqlconn.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/odbc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/odbc/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
