--- a/.gitattributes
+++ b/.gitattributes
@@ -694,6 +694,7 @@ fcl/db/sqldb/mysql/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=na
 fcl/db/sqldb/mysql/mysql40conn.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/mysql41conn.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/mysql4conn.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/db/sqldb/mysql/mysql50conn.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/mysql/mysqlconn.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/odbc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/db/sqldb/odbc/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -1449,6 +1450,8 @@ packages/base/mysql/mysql4_version.pp svn_mime_002dtype=text%2Fplain svn_eol_002
 packages/base/mysql/mysql4dyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql4impl.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysql4types.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/mysql50.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/mysql/mysql50dyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/mysqls.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/testdb3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/mysql/testdb4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
