--- a/.gitattributes
+++ b/.gitattributes
@@ -6029,6 +6029,7 @@ tests/webtbs/tw4477.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw4487.pp svn_mime_002dtype=text%2Fplain
 tests/webtbs/tw4489.pp svn_mime_002dtype=text%2Fplain
 tests/webtbs/tw4496.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/webtbs/tw4537.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/ub1873.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/ub1883.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/uw0555.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
