--- a/.gitattributes
+++ b/.gitattributes
@@ -3166,6 +3166,7 @@ packages/extra/winunits/shlobj.pp svn_mime_002dtype=text%2Fplain svn_eol_002dsty
 packages/extra/winunits/winver.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/extra/x11/cursorfont.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/keysym.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
