--- a/.gitattributes
+++ b/.gitattributes
@@ -6032,6 +6032,7 @@ tests/webtbs/tw4487.pp svn_mime_002dtype=text%2Fplain
 tests/webtbs/tw4489.pp svn_mime_002dtype=text%2Fplain
 tests/webtbs/tw4496.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw4519.pp svn_mime_002dtype=text%2Fplain
+tests/webtbs/tw4520.pp svn_mime_002dtype=text%2Fplain
 tests/webtbs/tw4529.pp svn_mime_002dtype=text%2Fplain
 tests/webtbs/tw4537.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw4540.pp svn_mime_002dtype=text%2Fplain
