* fixed strpos() in case source or target is nil   + added test for this
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@1907 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -5073,6 +5073,7 @@ tests/test/tstring4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tstring5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tstring6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tstring7.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tstring8.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tstrreal1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tstrreal2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tsubdecl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
