* use more precise vs_* information to replace less parameters of inlined     procedures with const and value parameters with temps, allowing a bit     more value propagation   + tinline6.pp for testing wrong propagation of value parameters in     dangerous situations
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@1914 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -5013,6 +5013,7 @@ tests/test/tinline1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinline2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinline3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tinline4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tinline6.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint641.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint642.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tint643.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
