--- a/.gitattributes
+++ b/.gitattributes
@@ -3172,7 +3172,7 @@ packages/extra/x11/x.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/xatom.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/xcms.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/xf86dga.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-packages/extra/x11/xf86dga1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/extra/x11/xf86dga1.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/xf86vmode.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/xi.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/extra/x11/xinerama.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
