* new additional C parameter passing test programs * finally added powerpc64/linux C object files to repository
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@1982 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -4811,6 +4811,11 @@ tests/test/cg/obj/linux/arm/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/i386/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/m68k/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/powerpc/ctest.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/powerpc/tcext3.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/powerpc/tcext4.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/powerpc64/ctest.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/powerpc64/tcext3.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/powerpc64/tcext4.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/sparc/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/x86_64/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/macos/powerpc/ctest.o svn_mime_002dtype=application%2Foctet-stream
