--- a/.gitattributes
+++ b/.gitattributes
@@ -4809,6 +4809,8 @@ tests/test/cg/obj/freebsd/i386/ctest.o svn_mime_002dtype=application%2Foctet-str
 tests/test/cg/obj/go32v2/i386/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/arm/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/i386/ctest.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/i386/tcext3.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/i386/tcext4.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/m68k/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/powerpc/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/powerpc/tcext3.o svn_mime_002dtype=application%2Foctet-stream
