--- a/.gitattributes
+++ b/.gitattributes
@@ -996,6 +996,9 @@ fcl/win32/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/win32/simpleipc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/win32/syncobjs.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/win32/winreg.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/wince/eventlog.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/wince/ezcgi.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+fcl/wince/pipes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 fcl/xml/dom.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
