--- a/.gitattributes
+++ b/.gitattributes
@@ -5023,6 +5023,11 @@ tests/test/tfpu3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tfpu4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tfpu5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tfpuover.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tgeneric1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tgeneric2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tgeneric3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tgeneric4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tgeneric5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tgoto.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/theap.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/thintdir.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -5110,6 +5115,8 @@ tests/test/tutf82.pp svn_mime_002dtype=text%2Fplain%3Bcharset%3Dutf-8 svn_eol_00
 tests/test/twide1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/twide2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uabstrcl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/ugeneric3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/ugeneric4.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uimpluni1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uimpluni2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/uinline4a.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
