--- a/.gitattributes
+++ b/.gitattributes
@@ -4825,6 +4825,8 @@ tests/test/cg/obj/linux/powerpc64/tcext3.o svn_mime_002dtype=application%2Foctet
 tests/test/cg/obj/linux/powerpc64/tcext4.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/sparc/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/linux/x86_64/ctest.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/x86_64/tcext3.o svn_mime_002dtype=application%2Foctet-stream
+tests/test/cg/obj/linux/x86_64/tcext4.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/macos/powerpc/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/netbsd/m68k/ctest.o svn_mime_002dtype=application%2Foctet-stream
 tests/test/cg/obj/os2/i386/ctest.o svn_mime_002dtype=application%2Foctet-stream
