* graph and ggigraph unit moved to packages/base
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@2071 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1165,6 +1165,24 @@ packages/base/gdbint/gdbobjs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyl
 packages/base/gdbint/gdbver.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/gdbint/symify.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/gdbint/testgdb.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/amiga/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/go32v2/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/clip.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/fills.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/fontdata.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/graph.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/graphh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/gtext.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/makefile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/modes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/inc/palette.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/unix/ggigraph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/unix/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/unix/graph16.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/win32/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/win32/wincrt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/base/graph/win32/winmouse.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/hash/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/hash/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/base/hash/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3212,7 +3230,6 @@ rtl/amiga/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/crt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/dos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/amiga/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/os.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amiga/printer.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/arm/arm.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3345,7 +3362,6 @@ rtl/go32v2/dxeload.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/dxetype.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/emu387.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/go32.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/go32v2/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/initc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/keyboard.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/go32v2/mouse.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3410,15 +3426,6 @@ rtl/inc/genset.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/genstr.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/genstrs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/getopts.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/clip.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/fills.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/fontdata.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/graph.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/graphh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/gtext.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/makefile.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/modes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/inc/graph/palette.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/heap.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/heaph.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/inc/heaptrc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -3963,9 +3970,6 @@ rtl/unix/fpmake.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/unix/genfdset.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/unix/genfuncs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/unix/gensigset.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/unix/ggigraph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/unix/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/unix/graph16.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/unix/initc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/unix/ipc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/unix/ipccdecl.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4022,7 +4026,6 @@ rtl/win32/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/crt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/dos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/dynlibs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/graph.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/initc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/keyboard.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/messages.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4038,7 +4041,6 @@ rtl/win32/tthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/video.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/win32res.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/wincrt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/windows.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winevent.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/wininc/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -4054,7 +4056,6 @@ rtl/win32/wininc/redef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=nati
 rtl/win32/wininc/struct.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/wininc/unidef.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/wininc/unifun.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/win32/winmouse.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsock.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win32/winsysut.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/win64/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
