added test cases for comming macpas features
git-svn-id: https://svn.freepascal.org/svn/fpc/trunk@2302 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -5062,6 +5062,9 @@ tests/test/tintuint.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tlibrary1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tlibrary2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacfunret.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tmaclocalprocparam.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tmacnonlocalexit.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/test/tmacnonlocalgoto.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacpas1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacpas2.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/test/tmacpas3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
